Moving to gitlab
Update most links

--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
                             </p></a>
                     </li>
                     <li class="flex-item"><!-- column large-3 medium-4 small-6  -->
-                        <a href="https://github.com/ColinDuquesnoy/MellowPlayer/blob/develop/.github/CONTRIBUTING.md#adding-support-for-a-new-service">
+                        <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#adding-support-for-a-new-service">
                         <img src="img/your-favo.svg" alt="">
                         <p>
                             Your favorite service ?
@@ -211,7 +211,7 @@
                             Software for which the original source code is made
                             freely available and may be redistributed and
                             modified.
-                        </p><a class="cat" href="https://github.com/ColinDuquesnoy/MellowPlayer/blob/master/.github/CONTRIBUTING.md#contributing-to-mellowplayer">Want to contribute ?</a>
+                        </p><a class="cat" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Want to contribute ?</a>
                     </li>
                     <li class="column large-4 medium-4 small-12">
                         <img alt="" src="img/features-picto_cross-y.svg">
@@ -446,7 +446,7 @@
                     	    </h3>
                     	    <p>
                     	        You will have to compile from source. Grab
-                    	        the latest source release from <strong><a href="http://github.com/ColinDuquesnoy/MellowPlayer">github</a></strong>, extract the archive and run the following commands:
+                    	        the latest source release from <strong><a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer">github</a></strong>, extract the archive and run the following commands:
                     	    </p>
                     	    <div>
                     	        <div class="highlight-bash">
@@ -492,24 +492,24 @@
                         If you feel like you want to contribute to the project
                         :
                     </p>
-                </div><a class="cat alternate row" href="https://github.com/ColinDuquesnoy/MellowPlayer/blob/master/.github/CONTRIBUTING.md#contributing-to-mellowplayer">Checkout the contributing
+                </div><a class="cat alternate row" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Checkout the contributing
                 guidelines</a> <a class="cat alternate row" href="http://mellowplayer.readthedocs.org/en/latest/">Checkout the
                 documentation</a>
             </section><!-- END SECTION CONTRIBUTION -->
             <!-- <section class="keep-in">
             <h1>Keep in touch</h1>
             <ul>
-                <li><a href="#"><img src="img/features-picto_github.svg" alt=""></a></li>
+                <li><a href="#"><img src="img/features-picto_gitlab.svg" alt=""></a></li>
                 <li><a href="#"><img src="img/features-picto_twitter.svg" alt=""></a></li>
                 <li><a href="#"><img src="img/features-picto_google.svg" alt=""></a></li>
             </ul>
         </section> --><!--  END SECTION KEEP-IN -->
-            <footer id="about">
+
                 <div class="row align-middle">
                 	<div class="footer-menu column small-12 medium-5 large-5">
                 		<ul>                		    
                 		    <li>
-                		        <a href="https://github.com/ColinDuquesnoy/MellowPlayer/issues">Issue tracker</a>
+                		        <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/issues">Issue tracker</a>
                 		    </li>
                 		    <li>
                 		        <a href="http://mellowplayer.readthedocs.io/en/latest/developers/index.html">API</a>
@@ -525,8 +525,8 @@
                 	<div class="social-media-div column small-12 medium-2 large-2">
 	                	<ul class="social-media">
 	                	    <li>
-	                	        <a href="https://github.com/ColinDuquesnoy/MellowPlayer"><img alt="" src=
-	                	        "img/features-picto_github.svg"></a>
+	                	        <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer"><img alt="" src=
+	                	        "img/features-picto_gitlab.svg"></a>
 	                	    </li>
 	                	    <!-- <li>
 	                	        <a href="#"><img alt="" src=
