Website: fix footer style issue

--- a/public/index.html
+++ b/public/index.html
@@ -495,16 +495,8 @@
                 </div><a class="cat alternate row" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Checkout the contributing
                 guidelines</a> <a class="cat alternate row" href="http://mellowplayer.readthedocs.org/en/latest/">Checkout the
                 documentation</a>
-            </section><!-- END SECTION CONTRIBUTION -->
-            <!-- <section class="keep-in">
-            <h1>Keep in touch</h1>
-            <ul>
-                <li><a href="#"><img src="img/features-picto_gitlab.svg" alt=""></a></li>
-                <li><a href="#"><img src="img/features-picto_twitter.svg" alt=""></a></li>
-                <li><a href="#"><img src="img/features-picto_google.svg" alt=""></a></li>
-            </ul>
-        </section> --><!--  END SECTION KEEP-IN -->
-
+            </section>
+            <footer id="about">
                 <div class="row align-middle">
                 	<div class="footer-menu column small-12 medium-5 large-5">
                 		<ul>                		    
@@ -528,14 +520,6 @@
 	                	        <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer"><img alt="" src=
 	                	        "img/features-picto_gitlab.svg"></a>
 	                	    </li>
-	                	    <!-- <li>
-	                	        <a href="#"><img alt="" src=
-	                	        "img/features-picto_twitter.svg"></a>
-	                	    </li>
-	                	    <li>
-	                	        <a href="#"><img alt="" src=
-	                	        "img/features-picto_google.svg"></a>
-	                	    </li> -->
 	                	</ul>
                 	</div>
                 	<div class="credits column small-12 medium-5 large-5">
