Update download instructions and links

--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
                             Cross-platform
                         </h2>
                         <p>
-                            Available on Windows, Mac OSX and GNU/Linux <br>
+                            Available on Windows and GNU/Linux <br>
                         </p><br><a class="cat go-to-dl" href="">Download the app !</a>
                     </li>
                     <li class="column large-4 medium-4 small-12">
@@ -234,130 +234,100 @@
                 </ul>
                 <div class="compare-table">
                     <div class="row">
-                        <div class="title column small-3">
+                        <div class="title column small-4">
                             <p></p>
                         </div>
-                        <div class="title column small-3">
+                        <div class="title column small-4">
                             <p>
                                 LINUX
                             </p>
                         </div>
-                        <div class="title column small-3">
-                            <p>
-                                OS X
-                            </p>
-                        </div>
-                        <div class="title column small-3">
+                        <div class="title column small-4">
                             <p>
                                 WINDOWS
                             </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 System tray integration
                             </p>
                         </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
-                        <div class="column small-3">
-                            <p>
-                                <img src="img/features-picto_v.svg" alt="" class="included">
-                            </p>
-                        </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 Hot keys
                             </p>
                         </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
-                        <div class="column small-3">
-                            <p>
-                                <img src="img/features-picto_v.svg" alt="" class="included">
-                            </p>
-                        </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 Mpris2 support
                             </p>
                         </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
-                        <div class="column small-3">
-                            <p>
-                                <img src="img/features-picto_cross-13.svg" alt="" class="non-included">
-                            </p>
-                        </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_cross-13.svg" alt="" class="non-included">
                             </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 Notifications
                             </p>
                         </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
-                        <div class="column small-3">
-                            <p>
-                                <img src="img/features-picto_v.svg" alt="" class="included">
-                            </p>
-                        </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 Listening history
                             </p>
                         </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
                         </div>
-                        <div class="column small-3">
-                            <p>
-                                <img src="img/features-picto_v.svg" alt="" class="included">
-                            </p>
-                        </div>
-                        <div class="column small-3">
+                        <div class="column small-4">
                             <p>
                                 <img src="img/features-picto_v.svg" alt="" class="included">
                             </p>
@@ -375,21 +345,15 @@
                 </p>
                 <ul class="row align-center">
                     <li class="column small-3">
-                         <a href="https://github.com/ColinDuquesnoy/MellowPlayer/releases/download/3.4.0/MellowPlayer-x86_64.AppImage"><img alt="" src="img/features-picto_linux.svg">
+                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=3.4.0%2FMellowPlayer-x86_64.appimage"><img alt="" src="img/features-picto_linux.svg">
                         <p>
                             GNU/Linux
                         </p></a>
                     </li>
                     <li class="column small-3">
-                         <a href="https://github.com/ColinDuquesnoy/MellowPlayer/releases/download/3.4.0/MellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
+                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=3.4.0%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
                         <p>
                             Windows
-                        </p></a>
-                    </li>
-                    <li class="column small-3">
-                         <a href="https://github.com/ColinDuquesnoy/MellowPlayer/releases/download/3.4.0/MellowPlayer.dmg"><img alt="" src="img/features-picto_mac.svg">
-                        <p>
-                            OSx
                         </p></a>
                     </li>
                 </ul>
