Migrate links from github to gitlab
Now it should be good.

--- a/public/index.html
+++ b/public/index.html
@@ -488,7 +488,7 @@
                 	</div>
                 	<div class="credits column small-12 medium-5 large-5">
                 	    <p>
-                	        © 2017 <a href="https://github.com/ColinDuquesnoy">Colin Duquesnoy</a> - Webdesign :
+                	        © 2017 <a href="https://gitlab.com/ColinDuquesnoy">Colin Duquesnoy</a> - Webdesign :
                 	        <a href="https://celinethiry.github.io">Céline Thiry</a>
                 	    </p>
                 	</div>
