Website: update download links

--- a/public/index.html
+++ b/public/index.html
@@ -345,13 +345,13 @@
                 </p>
                 <ul class="row align-center">
                     <li class="column small-3">
-                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=3.4.0%2FMellowPlayer-x86_64.appimage"><img alt="" src="img/features-picto_linux.svg">
+                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.5.0%2FMellowPlayer-x86_64.AppImage"><img alt="" src="img/features-picto_linux.svg">
                         <p>
                             GNU/Linux
                         </p></a>
                     </li>
                     <li class="column small-3">
-                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=3.4.0%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
+                         <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.5.0%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
                         <p>
                             Windows
                         </p></a>
