fix broken menu links

--- a/public/index.html
+++ b/public/index.html
@@ -33,16 +33,16 @@
                     </div>
                     <ul class="menu expand column align-right my-desktop-menu">
                         <li>
-                            <a href="">supported services</a>
+                            <a href="#services">supported services</a>
                         </li>
                         <li>
-                            <a href="">features</a>
+                            <a href="#features">features</a>
                         </li>
                         <li>
-                            <a href="">downloads</a>
+                            <a href="#downloads">downloads</a>
                         </li>
                         <li>
-                            <a href="">contributing</a>
+                            <a href="#contribution">contributing</a>
                         </li>
                         <!-- <li>
                             <a href="">about</a>
