Update doc & website to point to the OBS Download Page
On openSUSE, the package has been renamed to mellowplayer (lowercase!)

--- a/public/index.html
+++ b/public/index.html
@@ -380,6 +380,13 @@
       </p>
       <ul class="row align-center">
         <li class="column small-3">
+          <a rel="preconnect" href="https://software.opensuse.org//download.html?project=home%3AColinDuquesnoy&package=mellowplayer"><img alt="" src="img/features-picto_linux.svg">
+            <p>
+              GNU/Linux<br>Native packages (Ubuntu,...)
+            </p>
+          </a>
+        </li>
+        <li class="column small-3">
           <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable%2F3.6.0%2FMellowPlayer.flatpak"><img alt="" src="img/features-picto_linux.svg">
             <p>
               GNU/Linux<br>Flatpak
