--- a/public/index.html
+++ b/public/index.html
@@ -380,28 +380,14 @@
       </p>
       <ul class="row align-center">
         <li class="column small-3">
-          <a rel="preconnect" href="https://software.opensuse.org//download.html?project=home%3AColinDuquesnoy&package=mellowplayer"><img alt="" src="img/features-picto_linux.svg">
+          <a rel="preconnect" href="https://flathub.org/apps/details/com.gitlab.ColinDuquesnoy.MellowPlayer"><img alt="" src="img/features-picto_linux.svg">
             <p>
-              GNU/Linux<br>Native packages (Ubuntu,...)
+              GNU/Linux
             </p>
           </a>
         </li>
         <li class="column small-3">
-          <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable%2F3.6.5%2FMellowPlayer.flatpak"><img alt="" src="img/features-picto_linux.svg">
-            <p>
-              GNU/Linux<br>Flatpak
-            </p>
-          </a>
-        </li>
-        <li class="column small-3">
-          <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable%2F3.6.5%2FMellowPlayer-x86_64.AppImage"><img alt="" src="img/features-picto_linux.svg">
-            <p>
-              GNU/Linux<br>AppImage
-            </p>
-          </a>
-        </li>
-        <li class="column small-3">
-          <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.6.5%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
+          <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.6.6%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
             <p>
               Windows
             </p>
