#464 Technical stack update
Exclude catch.hpp from code coverage

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-  <title>
-    Mellow Player
-  </title>
+  <title>Mellow Player</title>
   <meta content="MellowPlayer is a free, open source and cross-platform desktop application for listening to your favorite streaming music sites." name="description">
   <link rel="shortcut icon" type="image/png" href="img/img_mellow-icon.png" />
-  <link rel="stylesheet" rel="subresource" type="text/css" href="css/style.css" media="none" onload="if(media!='all')media='all'">
-  <link rel="stylesheet" rel="subresource" type="text/css" href="css/foundation.min.css" media="none" onload="if(media!='all')media='all'">
-  <link rel="stylesheet" rel="subresource" type="text/css" href="css/animate.css" media="none" onload="if(media!='all')media='all'">
-  <link rel="stylesheet" rel="subresource" type="text/css" href="css/slider.css" media="none" onload="if(media!='all')media='all'">
-  <link rel="stylesheet" rel="subresource" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/slider.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
 </head>
 
 <body>
@@ -94,7 +92,7 @@
         <!-- row align-center  -->
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.spotify.com/"><img alt="" src="img/mellowicons_spotify.svg">
+          <a href="http://www.spotify.com/"><img alt="" src="img/mellowicons_spotify.svg">
             <p>
               Spotify
             </p>
@@ -102,7 +100,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.deezer.com/"><img alt="" src="img/mellowicons_deezer.svg">
+          <a href="http://www.deezer.com/"><img alt="" src="img/mellowicons_deezer.svg">
             <p>
               Deezer
             </p>
@@ -110,7 +108,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://play.google.com/music/listen"><img alt="" src="img/logo-googleplay.svg">
+          <a href="https://play.google.com/music/listen"><img alt="" src="img/logo-googleplay.svg">
             <p>
               Google Play
             </p>
@@ -119,7 +117,7 @@
 
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.soundcloud.com/"><img alt="" src="img/mellowicons_soundcloud.svg">
+          <a href="http://www.soundcloud.com/"><img alt="" src="img/mellowicons_soundcloud.svg">
             <p>
               Soundcloud
             </p>
@@ -127,7 +125,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.mixcloud.com/"><img alt="" src="img/mellowicons_mixcloud.svg">
+          <a href="http://www.mixcloud.com/"><img alt="" src="img/mellowicons_mixcloud.svg">
             <p>
               Mixcloud
             </p>
@@ -135,7 +133,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://8tracks.com/"><img alt="" src="img/mellowicons_8tracks.svg">
+          <a href="http://8tracks.com/"><img alt="" src="img/mellowicons_8tracks.svg">
             <p>
               8tracks
             </p>
@@ -143,7 +141,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.tunein.com/"><img alt="" src="img/mellowicons_tunein.svg">
+          <a href="http://www.tunein.com/"><img alt="" src="img/mellowicons_tunein.svg">
             <p>
               Tune in
             </p>
@@ -151,7 +149,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.tidal.com/"><img alt="" src="img/mellowicons_tidal.svg">
+          <a href="http://www.tidal.com/"><img alt="" src="img/mellowicons_tidal.svg">
             <p>
               Tidal
             </p>
@@ -159,7 +157,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="http://www.youtube.com/"><img alt="" src="img/mellowicons_youtube.svg">
+          <a href="http://www.youtube.com/"><img alt="" src="img/mellowicons_youtube.svg">
             <p>
               Youtube
             </p>
@@ -167,7 +165,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://www.anghami.com/"><img alt="" src="img/mellowicons_anghami.svg">
+          <a href="https://www.anghami.com/"><img alt="" src="img/mellowicons_anghami.svg">
             <p>
               Anghami
             </p>
@@ -175,7 +173,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://play.pocketcasts.com/"><img alt="" src="img/mellowicons_pocketcasts.svg" width="128" height="128">
+          <a href="https://play.pocketcasts.com/"><img alt="" src="img/mellowicons_pocketcasts.svg" width="128" height="128">
             <p>
               Pocket Casts
             </p>
@@ -183,7 +181,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://hearthis.at/"><img alt="" src="img/mellowicons_hearthisat.svg" width="128" height="128">
+          <a href="https://hearthis.at/"><img alt="" src="img/mellowicons_hearthisat.svg" width="128" height="128">
             <p>
               Hear this at
             </p>
@@ -191,7 +189,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://www.jamendo.com/start"><img alt="" src="img/mellowicons_jamendo.svg" width="128" height="128">
+          <a href="https://www.jamendo.com/start"><img alt="" src="img/mellowicons_jamendo.svg" width="128" height="128">
             <p>
               Jamendo
             </p>
@@ -199,7 +197,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://www.radionomy.com/"><img alt="" src="img/mellowicons_radionomy.svg" width="128" height="128">
+          <a href="https://www.radionomy.com/"><img alt="" src="img/mellowicons_radionomy.svg" width="128" height="128">
             <p>
               Radionomy
             </p>
@@ -207,7 +205,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://www.wynk.in/music"><img alt="" src="img/wynk-music-icon.png" width="128" height="128">
+          <a href="https://www.wynk.in/music"><img alt="" src="img/wynk-music-icon.png" width="128" height="128">
             <p>
               Wynk
             </p>
@@ -215,7 +213,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://github.com/notandy/ympd"><img alt="" src="img/mellowicons_ympd.svg" width="128" height="128">
+          <a href="https://github.com/notandy/ympd"><img alt="" src="img/mellowicons_ympd.svg" width="128" height="128">
             <p>
               ympd
             </p>
@@ -223,7 +221,7 @@
         </li>
         <li class="flex-item">
           <!-- column large-3 medium-4 small-6  -->
-          <a rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#adding-support-for-a-new-service">
+          <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#adding-support-for-a-new-service">
             <img src="img/your-favo.svg" alt="">
             <p>
               Your favorite service ?
@@ -246,7 +244,7 @@
             Software for which the original source code is made
             freely available and may be redistributed and
             modified.
-          </p><a class="cat" rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Want to contribute ?</a>
+          </p><a class="cat"  href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Want to contribute ?</a>
         </li>
         <li class="column large-4 medium-4 small-12">
           <img alt="" src="img/features-picto_cross-y.svg">
@@ -264,7 +262,7 @@
           </h2>
           <p>
             Plugin based application, you can add support for a new service by writing a plugin.
-          </p><a class="cat" rel="preconnect" href="http://mellowplayer.readthedocs.io/en/latest/developers/plugins.html#create-a-new-plugin">Write a new plugin ?</a>
+          </p><a class="cat"  href="http://mellowplayer.readthedocs.io/en/latest/developers/plugins.html#create-a-new-plugin">Write a new plugin ?</a>
         </li>
       </ul>
       <div class="compare-table">
@@ -380,97 +378,20 @@
       </p>
       <ul class="row align-center">
         <li class="column small-3">
-          <a rel="preconnect" href="https://flathub.org/apps/details/com.gitlab.ColinDuquesnoy.MellowPlayer"><img alt="" src="img/features-picto_linux.svg">
+          <a href="https://flathub.org/apps/details/com.gitlab.ColinDuquesnoy.MellowPlayer"><img alt="" src="img/features-picto_linux.svg">
             <p>
               GNU/Linux
             </p>
           </a>
         </li>
         <li class="column small-3">
-          <a rel="preconnect" href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.6.6%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
+          <a href="https://bintray.com/colinduquesnoy/MellowPlayer/download_file?file_path=stable/3.6.6%2FMellowPlayer_Setup.exe"><img alt="" src="img/features-picto_window.svg">
             <p>
               Windows
             </p>
           </a>
         </li>
       </ul>
-      <div class="hidden-section row align-center">
-        <h2>GNU/Linux</h2>
-        <div class="gnu-linux row align-center">
-          <div class="distributions column large-7 medium-12 small-12" id="kaos">
-            <img src="img/kaos.png" alt="Kaos logo">
-            <h3>
-              KaOS
-            </h3>
-            <p>
-              MellowPlayer is available from <strong><a rel="preconnect" href="http://kaosx.tk/packages/index.php?subdir=apps&sortby=name">KaOSx/apps</a></strong> repository, just run:
-            </p>
-            <div>
-              <div class="highlight-bash">
-                <code>$ sudo pacman -S mellowplayer</code>
-                <a class="copy-button" href="">copy</a>
-              </div>
-            </div>
-
-          </div>
-          <div class="distributions column large-7 medium-12 small-12" id="archlinux">
-            <img src="img/archlinux.png" alt="ArchLinux logo">
-            <h3>
-              ArchLinux
-            </h3>
-            <p>
-              MellowPlayer is available from the <strong><a rel="preconnect" href="https://aur.archlinux.org/packages/mellowplayer">AUR</a></strong>, install it with your favorite AUR helper.
-            </p>
-            <p>
-              E.g. with yaourt:
-            </p>
-            <div>
-              <div class="highlight-bash">
-                <code>$ yaourt -S mellowplayer</code>
-                <a class="copy-button" href="">copy</a>
-              </div>
-            </div>
-          </div>
-          <div class="distributions column large-7 medium-12 small-12" id="ubuntu">
-            <img src="img/ubuntu.png" alt="Ubuntu logo">
-            <h3>
-              Ubuntu
-            </h3>
-            <p>
-              Not supported until qt 5.6 is available in
-              the official ubuntu repositories.
-            </p>
-          </div>
-          <div class="distributions column large-7 medium-12 small-12" id="other-distributions">
-            <h3>
-              Other distributions
-            </h3>
-            <p>
-              You will have to compile from source. Grab
-              the latest source release from <strong><a rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer">github</a></strong>, extract the archive and run the following commands:
-            </p>
-            <div>
-              <div class="highlight-bash">
-                <code>$ qmake-qt5</code>
-                <a class="copy-button" href="">copy</a>
-              </div>
-              <div class="highlight-bash">
-                <code>$ make</code>
-                <a class="copy-button" href="">copy</a>
-              </div>
-              <div class="highlight-bash">
-                <code>$ sudo make install</code>
-                <a class="copy-button" href="">copy</a>
-              </div>
-            </div>
-            <p class="tips">
-              Before compiling MellowPlayer 2, you will
-              need to install <strong><a rel="preconnect" href="https://www.qt.io/">Qt</a> (&gt;= 5.6)</strong> and
-              <strong><a rel="preconnect" href="https://techbase.kde.org/Projects/Snorenotify">Snorenotify</a>( &gt;= 0.7)</strong>.
-            </p>
-          </div> <!-- END other distribution -->
-        </div> <!-- end gnu-linux section -->
-      </div> <!-- end hidden section -->
     </section><!-- END SECTION DOWNLOADS -->
     <section class="contribution" id="contribution">
       <h1>
@@ -493,8 +414,8 @@
           If you feel like you want to contribute to the project
           :
         </p>
-      </div><a class="cat alternate row" rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Checkout the contributing
-        guidelines</a> <a class="cat alternate row" rel="preconnect" href="http://mellowplayer.readthedocs.org/en/latest/">Checkout the
+      </div><a class="cat alternate row"  href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/blob/master/CONTRIBUTING.md#contributing-to-mellowplayer">Checkout the contributing
+        guidelines</a> <a class="cat alternate row"  href="http://mellowplayer.readthedocs.org/en/latest/">Checkout the
         documentation</a>
     </section>
     <footer id="about">
@@ -502,30 +423,30 @@
         <div class="footer-menu column small-12 medium-5 large-5">
           <ul>
             <li>
-              <a rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/issues">Issue tracker</a>
+              <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer/issues">Issue tracker</a>
             </li>
             <li>
-              <a rel="preconnect" href="http://mellowplayer.readthedocs.io/en/latest/developers/index.html">API</a>
+              <a href="http://mellowplayer.readthedocs.io/en/latest/developers/index.html">API</a>
             </li>
             <li>
-              <a rel="preconnect" href="https://www.gnu.org/licenses/gpl-2.0.fr.html">Licence</a>
+              <a href="https://www.gnu.org/licenses/gpl-2.0.fr.html">Licence</a>
             </li>
             <li>
-              <a rel="preconnect" href="mailto:colin.duquesnoy@gmail.com">Contact</a>
+              <a href="mailto:colin.duquesnoy@gmail.com">Contact</a>
             </li>
           </ul>
         </div>
         <div class="social-media-div column small-12 medium-2 large-2">
           <ul class="social-media">
             <li>
-              <a rel="preconnect" href="https://gitlab.com/ColinDuquesnoy/MellowPlayer"><img alt="" src="img/features-picto_gitlab.svg"></a>
+              <a href="https://gitlab.com/ColinDuquesnoy/MellowPlayer"><img alt="" src="img/features-picto_gitlab.svg"></a>
             </li>
           </ul>
         </div>
         <div class="credits column small-12 medium-5 large-5">
           <p>
-            © 2017 <a rel="preconnect" href="https://gitlab.com/ColinDuquesnoy">Colin Duquesnoy</a> - Webdesign :
-            <a rel="preconnect" href="https://celinethiry.github.io">Céline Thiry</a>
+            © 2017-2020 <a href="https://gitlab.com/ColinDuquesnoy">Colin Duquesnoy</a> - Webdesign :
+            <a href="https://celinethiry.github.io">Céline Thiry</a>
           </p>
         </div>
       </div>
